--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="flappy_bird_game"
+        android:label="Chor Police"
         android:name="${applicationName}"
         android:icon="@mipmap/chor">
         <activity
